--- a/web/angular-wallet/src/locales/bg.json
+++ b/web/angular-wallet/src/locales/bg.json
@@ -5,15 +5,18 @@
   "account_added": "Профилът е добавен успешно",
   "account_balance": "Наличност по сметка",
   "account_create_new": "Създаване на нов акаунт",
+  "account_create_new_short": "Нов акаунт",
   "account_created": "Вашият акаунт беше създаден",
   "account_details": "Данни за сметка",
   "account_id": "Сметка ID",
   "account_import": "Импортирайте съществуващия акаунт",
+  "account_import_short": "Импортиране на акаунт",
   "account_info": "Информация за сметка",
   "account_is_not_public_yet": "Забележка: Вашият профил няма да се вижда в blockchain, освен ако не изпълните поне една транзакция или сте получили монети или съобщения.",
   "account_no_assets": "Сметката няма активи",
   "account_qr_code": "Сметка QR код",
   "account_watch": "Импортирайте акаунт, който искате да наблюдавате само",
+  "account_watch_short": "Гледайте акаунта",
   "accounts": "Accounts",
   "actions": "Действие",
   "activate": "Активирате",
@@ -196,7 +199,6 @@
   "copy_send_message_link": "Copy 'Send Message' Link",
   "create_passive": "Create a new account without passphrase",
   "create_poll": "Създай анкета",
-  "create_your_account": "Създайте сметка",
   "csv_add_recipients": "Добавете получател с помощта на CSV",
   "csv_error_duplicated_recipient": "Дублиран получател",
   "csv_error_invalid_amount": "Невалидна стойност на сумата",
