--- a/web/angular-wallet/src/locales/cs.json
+++ b/web/angular-wallet/src/locales/cs.json
@@ -5,15 +5,18 @@
   "account_added": "Účet byl úspěšně přidán",
   "account_balance": "Zůstatek na účtu",
   "account_create_new": "Vytvořit nový účet",
+  "account_create_new_short": "Nový účet",
   "account_created": "Váš účet byl vytvořen",
   "account_details": "Detaily účtu",
   "account_id": "ID účtu",
   "account_import": "Importovat existující účet",
+  "account_import_short": "Importovat účet",
   "account_info": "Informace o účtu",
   "account_is_not_public_yet": "Poznámka: Váš účet nebude v bloku blockchain viditelný, pokud neprovedete alespoň jednu transakci, nebo jste neobdrželi mince nebo zprávy.",
   "account_no_assets": "Žádná aktiva pro tento účet.",
   "account_qr_code": "QR kód účtu",
   "account_watch": "Importujte pouze účet, který chcete sledovat",
+  "account_watch_short": "Sledovat účet",
   "accounts": "Accounts",
   "actions": "Akce",
   "activate": "aktivovat",
@@ -196,7 +199,6 @@
   "copy_send_message_link": "Kopírovat odkaz \"Poslat zprávu\"",
   "create_passive": "Create a new account without passphrase",
   "create_poll": "Vytvořit anketu",
-  "create_your_account": "Vytvořit účet",
   "csv_add_recipients": "Přidat příjemce pomocí CSV",
   "csv_error_duplicated_recipient": "Duplikovaný příjemce",
   "csv_error_invalid_amount": "Neplatná hodnota částky",
