--- a/web/angular-wallet/src/locales/de-de.json
+++ b/web/angular-wallet/src/locales/de-de.json
@@ -5,15 +5,18 @@
   "account_added": "Konto erfolgreich hinzugefügt",
   "account_balance": "Guthaben",
   "account_create_new": "Ein neues Konto erstellen",
+  "account_create_new_short": "Neues Konto",
   "account_created": "Ihr Konto wurde erstellt",
   "account_details": "Kontodetails",
   "account_id": "Konto-ID",
   "account_import": "Vorhandenes Konto importieren",
+  "account_import_short": "Konto importieren",
   "account_info": "Kontoinformationen",
   "account_is_not_public_yet": "Hinweis: Ihr Konto ist in der Blockchain nur sichtbar, wenn Sie mindestens eine Transaktion ausführen oder Münzen oder Nachrichten erhalten haben.",
   "account_no_assets": "Keine Assets in diesem Konto gefunden.",
   "account_qr_code": "Konto-QR-Code",
   "account_watch": "Importieren Sie ein Konto, das Sie nur beobachten möchten",
+  "account_watch_short": "Konto beobachten",
   "accounts": "Accounts",
   "actions": "Aktionen",
   "activate": "Aktivieren",
@@ -196,7 +199,6 @@
   "copy_send_message_link": "'Nachricht senden'-Link kopieren",
   "create_passive": "Create a new account without passphrase",
   "create_poll": "Abstimmung erstellen",
-  "create_your_account": "Erstellen Sie Ihr Konto",
   "csv_add_recipients": "Empfänger mit CSV hinzufügen",
   "csv_error_duplicated_recipient": "Duplizierter Empfänger",
   "csv_error_invalid_amount": "Ungültiger Betragswert",
