--- a/web/angular-wallet/src/locales/el.json
+++ b/web/angular-wallet/src/locales/el.json
@@ -5,15 +5,18 @@
   "account_added": "Ο λογαριασμός προστέθηκε με επιτυχία",
   "account_balance": "Υπόλοιπο λογαριασμού",
   "account_create_new": "Δημιούργησε νέο λογαριασμό",
+  "account_create_new_short": "Νέος λογαριασμός",
   "account_created": "Ο λογαριασμός σας έχει δημιουργηθεί",
   "account_details": "Λεπτομέρειες λογαριασμού",
   "account_id": "ID λογαριασμού",
   "account_import": "Εισαγωγή υπάρχοντος λογαριασμού",
+  "account_import_short": "Εισαγωγή λογαριασμού",
   "account_info": "Πληροφορίες λογαριασμού",
   "account_is_not_public_yet": "Σημείωση: Ο λογαριασμός σας δεν θα είναι ορατός στο blockchain, εκτός εάν εκτελέσετε τουλάχιστον μία συναλλαγή ή έχετε λάβει νομίσματα ή μηνύματα.",
   "account_no_assets": "Δε βρέθηκαν μετοχές για αυτό το λογαριασμό.",
   "account_qr_code": "Κώδικας QR λογαριασμού",
   "account_watch": "Εισαγάγετε έναν λογαριασμό που θέλετε να παρατηρήσετε μόνο",
+  "account_watch_short": "Παρακολούθηση λογαριασμού",
   "accounts": "Accounts",
   "actions": "Ενέργειες",
   "activate": "Θέτω εις ενέργειαν",
@@ -196,7 +199,6 @@
   "copy_send_message_link": "Αντιγραφή του σύνδεσμου \"Αποστολή μηνύματος\"",
   "create_passive": "Create a new account without passphrase",
   "create_poll": "Δημιουργία δημοσκόπησης",
-  "create_your_account": "Δημιουργία του λογαριασμού σας",
   "csv_add_recipients": "Προσθέστε τον παραλήπτη χρησιμοποιώντας το CSV",
   "csv_error_duplicated_recipient": "Διπλότυπος παραλήπτης",
   "csv_error_invalid_amount": "Μη έγκυρη τιμή ποσού",
