--- a/web/angular-wallet/src/locales/en.json
+++ b/web/angular-wallet/src/locales/en.json
@@ -5,15 +5,18 @@
   "account_added": "Account added successfully",
   "account_balance": "Account Balance",
   "account_create_new": "Create a new account",
+  "account_create_new_short": "New Account",
   "account_created": "Your account has been created",
   "account_details": "Account Details",
   "account_id": "Account ID",
   "account_import": "Import existing account",
+  "account_import_short": "Import Account",
   "account_info": "Account Info",
   "account_is_not_public_yet": "Note: Your account won't be visible in the blockchain, unless you execute at least one transaction, or have received coins or messages.",
   "account_no_assets": "No assets found by this account.",
   "account_qr_code": "Account QR Code",
   "account_watch": "Import an account you'd like to observe only",
+  "account_watch_short": "Watch Account",
   "accounts": "Accounts",
   "actions": "Actions",
   "activate": "Activate",
@@ -196,7 +199,6 @@
   "copy_send_message_link": "Copy 'Send Message' Link",
   "create_passive": "Create a new account without passphrase",
   "create_poll": "Create Poll",
-  "create_your_account": "Create Your Account",
   "csv_add_recipients": "Add Recipient using CSV",
   "csv_error_duplicated_recipient": "Duplicated Recipient",
   "csv_error_invalid_amount": "Invalid amount value",
