--- a/web/angular-wallet/src/locales/es-es.json
+++ b/web/angular-wallet/src/locales/es-es.json
@@ -5,15 +5,18 @@
   "account_added": "Cuenta agregada exitosamente",
   "account_balance": "Saldo de la Cuenta",
   "account_create_new": "Crea una cuenta nueva",
+  "account_create_new_short": "Nueva cuenta",
   "account_created": "Tu cuenta ha sido creada",
   "account_details": "Detalles de Cuenta",
   "account_id": "ID de Cuenta",
   "account_import": "Importar cuenta existente",
+  "account_import_short": "Cuenta de importación",
   "account_info": "Información de Cuenta",
   "account_is_not_public_yet": "Nota: su cuenta no será visible en la cadena de bloques, a menos que ejecute al menos una transacción o haya recibido monedas o mensajes.",
   "account_no_assets": "No se han encontrado activos para esta cuenta.",
   "account_qr_code": "Código QR de la Cuenta",
   "account_watch": "Importa una cuenta que solo deseas observar",
+  "account_watch_short": "Ver cuenta",
   "accounts": "Accounts",
   "actions": "Acciones",
   "activate": "Activar",
@@ -196,7 +199,6 @@
   "copy_send_message_link": "Copiar el enlace 'Enviar Mensaje'",
   "create_passive": "Create a new account without passphrase",
   "create_poll": "Crear Encuesta",
-  "create_your_account": "Crear Su Cuenta",
   "csv_add_recipients": "Agregar destinatario utilizando CSV",
   "csv_error_duplicated_recipient": "Destinatario duplicado",
   "csv_error_invalid_amount": "Valor de la cantidad no válida",
