--- a/web/angular-wallet/src/locales/fi.json
+++ b/web/angular-wallet/src/locales/fi.json
@@ -5,15 +5,18 @@
   "account_added": "Tili lisätty onnistuneesti",
   "account_balance": "Tilin saldo",
   "account_create_new": "Luo uusi tili",
+  "account_create_new_short": "Uusi tili",
   "account_created": "Sinun tilisi on luotu",
   "account_details": "Tilin tiedot",
   "account_id": "Tilinumero",
   "account_import": "Tuo nykyinen tili",
+  "account_import_short": "Tuo tili",
   "account_info": "Tilin tiedot",
   "account_is_not_public_yet": "Huomautus: Tilisi ei näy blockchainissa, ellet suorita vähintään yhtä tapahtumaa tai olet saanut rahoja tai viestejä.",
   "account_no_assets": "Tällä tilillä ei ole arvopapereita.",
   "account_qr_code": "Tilin QR-koodi",
   "account_watch": "Tuo tili, jonka haluat vain tarkkailla",
+  "account_watch_short": "Tarkkaile tiliä",
   "accounts": "Accounts",
   "actions": "Toiminnot",
   "activate": "Aktivoida",
@@ -196,7 +199,6 @@
   "copy_send_message_link": "Kopioi 'Lähetä viesti' -linkki",
   "create_passive": "Create a new account without passphrase",
   "create_poll": "Luo galluppi",
-  "create_your_account": "Luo tili",
   "csv_add_recipients": "Lisää vastaanottaja CSV: llä",
   "csv_error_duplicated_recipient": "Kopioitu vastaanottaja",
   "csv_error_invalid_amount": "Virheellinen summan arvo",
