--- a/web/angular-wallet/src/locales/fr.json
+++ b/web/angular-wallet/src/locales/fr.json
@@ -5,15 +5,18 @@
   "account_added": "Compte ajouté avec succès",
   "account_balance": "Solde du compte",
   "account_create_new": "Créer un nouveau compte",
+  "account_create_new_short": "Nouveau compte",
   "account_created": "Votre compte a été créé",
   "account_details": "Détails du compte",
   "account_id": "ID de compte",
   "account_import": "Importer un compte existant",
+  "account_import_short": "Importer un compte",
   "account_info": "Infos sur le compte",
   "account_is_not_public_yet": "Remarque: votre compte ne sera pas visible dans la blockchain, sauf si vous exécutez au moins une transaction ou si vous avez reçu des pièces ou des messages.",
   "account_no_assets": "Aucun actif trouvé sur ce compte.",
   "account_qr_code": "QR code de ce compte",
   "account_watch": "Importez uniquement un compte que vous souhaitez observer",
+  "account_watch_short": "Regarder le compte",
   "accounts": "Accounts",
   "actions": "Actions",
   "activate": "Activer",
@@ -196,7 +199,6 @@
   "copy_send_message_link": "Copier le lien « Envoyer un message »",
   "create_passive": "Create a new account without passphrase",
   "create_poll": "Créer un sondage",
-  "create_your_account": "Créer un compte",
   "csv_add_recipients": "Ajouter un destinataire à l'aide de CSV",
   "csv_error_duplicated_recipient": "Destinataire dupliqué",
   "csv_error_invalid_amount": "Valeur du montant invalide",
