--- a/web/angular-wallet/src/locales/gl.json
+++ b/web/angular-wallet/src/locales/gl.json
@@ -5,15 +5,18 @@
   "account_added": "Engadiuse a conta correctamente",
   "account_balance": "saldo da Conta",
   "account_create_new": "Crea unha conta nova",
+  "account_create_new_short": "Nova conta",
   "account_created": "Creouse a túa conta",
   "account_details": "Detalles da conta",
   "account_id": "ID da conta",
   "account_import": "Importar a conta existente",
+  "account_import_short": "Conta de importación",
   "account_info": "Información da conta",
   "account_is_not_public_yet": "Nota: a túa conta non será visible na blockchain, a menos que executes polo menos unha transacción ou teñas moedas ou mensaxes.",
   "account_no_assets": "Non se atoparon activos para esta conta.",
   "account_qr_code": "Account QR Code",
   "account_watch": "Importa unha conta que só desexes observar",
+  "account_watch_short": "Ver conta",
   "accounts": "Accounts",
   "actions": "Accións",
   "activate": "Activar",
@@ -196,7 +199,6 @@
   "copy_send_message_link": "Copialo enlace 'Enviar mensaxe'",
   "create_passive": "Create a new account without passphrase",
   "create_poll": "Cree unha enquisa",
-  "create_your_account": "Creala súa conta",
   "csv_add_recipients": "Engade destinatario usando CSV",
   "csv_error_duplicated_recipient": "Destinatario duplicado",
   "csv_error_invalid_amount": "O valor da cantidade non é válido",
