--- a/web/angular-wallet/src/locales/hr.json
+++ b/web/angular-wallet/src/locales/hr.json
@@ -5,15 +5,18 @@
   "account_added": "Račun je uspješno dodan",
   "account_balance": "Saldo računa",
   "account_create_new": "Izraditi novi račun",
+  "account_create_new_short": "Novi profil",
   "account_created": "Vaš račun je napravljen",
   "account_details": "Detalji računa",
   "account_id": "Račun ID",
   "account_import": "Uvezi postojeći račun",
+  "account_import_short": "Uvezi račun",
   "account_info": "Podaci računa",
   "account_is_not_public_yet": "Napomena: Vaš račun neće biti vidljiv u blockchainu, osim ako izvršite barem jednu transakciju ili primite kovanice ili poruke.",
   "account_no_assets": "Uz ovaj račun nisu pronađeni asseti.",
   "account_qr_code": "QR Kod Računa",
   "account_watch": "Uvezite račun koji želite samo promatrati",
+  "account_watch_short": "Pogledajte račun",
   "accounts": "Accounts",
   "actions": "Akcije",
   "activate": "Aktivirati",
@@ -196,7 +199,6 @@
   "copy_send_message_link": "Kopiraj poveznicu 'Pošalji poruku'",
   "create_passive": "Create a new account without passphrase",
   "create_poll": "Kreiraj anketu",
-  "create_your_account": "Kreirajte vaš račun",
   "csv_add_recipients": "Dodajte primatelja pomoću CSV-a",
   "csv_error_duplicated_recipient": "Duplirani primatelj",
   "csv_error_invalid_amount": "Nevažeća vrijednost iznosa",
