--- a/web/angular-wallet/src/locales/id.json
+++ b/web/angular-wallet/src/locales/id.json
@@ -5,15 +5,18 @@
   "account_added": "Akun berhasil ditambahkan",
   "account_balance": "Saldo Akun",
   "account_create_new": "Buat akun baru",
+  "account_create_new_short": "Akun baru",
   "account_created": "Akun anda telah dibuat",
   "account_details": "Detail catatan",
   "account_id": "Account ID",
   "account_import": "Impor akun yang ada",
+  "account_import_short": "Impor Akun",
   "account_info": "Info Catatan",
   "account_is_not_public_yet": "Catatan: Akun Anda tidak akan terlihat di blockchain, kecuali jika Anda melakukan setidaknya satu transaksi, atau telah menerima koin atau pesan.",
   "account_no_assets": "Tidak ada aset yang ditemukan oleh catatan ini.",
   "account_qr_code": "Kode QR Rekening",
   "account_watch": "Impor akun yang hanya ingin Anda amati",
+  "account_watch_short": "Tonton Akun",
   "accounts": "Accounts",
   "actions": "Tindakan",
   "activate": "Mengaktifkan",
@@ -196,7 +199,6 @@
   "copy_send_message_link": "Salin Link 'Kirim pesan'",
   "create_passive": "Create a new account without passphrase",
   "create_poll": "Buat Pemilihan",
-  "create_your_account": "Membuat akun",
   "csv_add_recipients": "Tambahkan Penerima menggunakan CSV",
   "csv_error_duplicated_recipient": "Penerima Gandakan",
   "csv_error_invalid_amount": "Nilai jumlah tidak valid",
