--- a/web/angular-wallet/src/locales/it.json
+++ b/web/angular-wallet/src/locales/it.json
@@ -5,15 +5,18 @@
   "account_added": "Account aggiunto correttamente",
   "account_balance": "Saldo",
   "account_create_new": "Creare un nuovo account",
+  "account_create_new_short": "Nuovo account",
   "account_created": "Il tuo account è stato creato",
   "account_details": "Dettagli account",
   "account_id": "Account ID",
   "account_import": "Importa account esistente",
+  "account_import_short": "Importa account",
   "account_info": "Info account",
   "account_is_not_public_yet": "Nota: il tuo account non sarà visibile nella blockchain, a meno che tu non esegua almeno una transazione, o abbia ricevuto monete o messaggi.",
   "account_no_assets": "Nessun asset trovato da questo account.",
   "account_qr_code": "Account QR Code",
   "account_watch": "Importa un account che desideri solo osservare",
+  "account_watch_short": "Guarda l'account",
   "accounts": "Accounts",
   "actions": "Azioni",
   "activate": "Attivare",
@@ -196,7 +199,6 @@
   "copy_send_message_link": "Copiare il link 'Invia messaggio'",
   "create_passive": "Create a new account without passphrase",
   "create_poll": "Crea sondaggio",
-  "create_your_account": "Crea il tuo Account",
   "csv_add_recipients": "Aggiungi destinatario tramite CSV",
   "csv_error_duplicated_recipient": "Destinatario duplicato",
   "csv_error_invalid_amount": "Valore dell'importo non valido",
