--- a/web/angular-wallet/src/locales/lt.json
+++ b/web/angular-wallet/src/locales/lt.json
@@ -5,15 +5,18 @@
   "account_added": "Paskyra pridėta sėkmingai",
   "account_balance": "Sąskaitos balansas",
   "account_create_new": "Sukurti naują paskyrą",
+  "account_create_new_short": "Nauja paskyra",
   "account_created": "Jūsų paskyra sukurta",
   "account_details": "Paskyros Duomenys",
   "account_id": "Sąskaitos ID",
   "account_import": "Importuoti esamą sąskaitą",
+  "account_import_short": "Importuoti sąskaitą",
   "account_info": "Sąskaitos informacija",
   "account_is_not_public_yet": "Pastaba: jūsų paskyra nebus matoma bloko grandinėje, nebent atliksite bent vieną operaciją arba gavote monetas ar pranešimus.",
   "account_no_assets": "Pagal šią sąskaitą aktyvas nerastas.",
   "account_qr_code": "Sąskaitos QR kodas",
   "account_watch": "Importuokite paskyrą, kurią norėtumėte tik stebėti",
+  "account_watch_short": "Stebėkite sąskaitą",
   "accounts": "Accounts",
   "actions": "Veiksmai",
   "activate": "Suaktyvinti",
@@ -196,7 +199,6 @@
   "copy_send_message_link": "Nukopijuokite nuorodą \"Siųsti pranešimą",
   "create_passive": "Sukurti sąskaita be slaptos frazės",
   "create_poll": "Sukurti apklausą",
-  "create_your_account": "Sukurkite savo sąskaitą",
   "csv_add_recipients": "Pridėti gavėją naudodami CSV",
   "csv_error_duplicated_recipient": "Kopijuotas gavėjas",
   "csv_error_invalid_amount": "Neteisinga sumos vertė",
