--- a/web/angular-wallet/src/locales/nl.json
+++ b/web/angular-wallet/src/locales/nl.json
@@ -5,15 +5,18 @@
   "account_added": "Account succesvol toegevoegd",
   "account_balance": "Rekening saldo",
   "account_create_new": "Maak een nieuw account aan",
+  "account_create_new_short": "Nieuw account",
   "account_created": "Je account is aangemaakt",
   "account_details": "Accountgegevens",
   "account_id": "Rekening-ID",
   "account_import": "Bestaand account importeren",
+  "account_import_short": "Account importeren",
   "account_info": "Rekening Informatie",
   "account_is_not_public_yet": "Opmerking: uw account is niet zichtbaar in de blockchain, tenzij u ten minste één transactie uitvoert of munten of berichten hebt ontvangen.",
   "account_no_assets": "Geen activa gevonden welke door deze account wordt uitgegeven.",
   "account_qr_code": "Account QR-code",
   "account_watch": "Importeer een account dat u alleen wilt observeren",
+  "account_watch_short": "Bekijk account",
   "accounts": "Accounts",
   "actions": "Acties",
   "activate": "Activeren",
@@ -196,7 +199,6 @@
   "copy_send_message_link": "Kopieer 'Stuur bericht' Link",
   "create_passive": "Create a new account without passphrase",
   "create_poll": "Peiling aanmaken",
-  "create_your_account": "Maak uw account aan",
   "csv_add_recipients": "Ontvanger toevoegen met CSV",
   "csv_error_duplicated_recipient": "Dubbele ontvanger",
   "csv_error_invalid_amount": "Ongeldige bedragwaarde",
