--- a/web/angular-wallet/src/locales/pl.json
+++ b/web/angular-wallet/src/locales/pl.json
@@ -5,15 +5,18 @@
   "account_added": "Konto zostało dodane pomyślnie",
   "account_balance": "Balans konta",
   "account_create_new": "Stwórz nowe konto",
+  "account_create_new_short": "Nowe konto",
   "account_created": "Twoje konto zostało utworzone",
   "account_details": "Szczegóły konta",
   "account_id": "ID konta",
   "account_import": "Zaimportuj istniejące konto",
+  "account_import_short": "Importuj konto",
   "account_info": "Dane konta",
   "account_is_not_public_yet": "Uwaga: Twoje konto nie będzie widoczne w łańcuchu bloków, chyba że wykonasz co najmniej jedną transakcję lub otrzymasz monety lub wiadomości.",
   "account_no_assets": "To konto nie posiada aktywów.",
   "account_qr_code": "QR-kod konta",
   "account_watch": "Zaimportuj tylko konto, które chcesz obserwować",
+  "account_watch_short": "Oglądaj konto",
   "accounts": "Accounts",
   "actions": "Działania",
   "activate": "Aktywuj",
@@ -196,7 +199,6 @@
   "copy_send_message_link": "Kopiuj link 'Wyślij Wiadomość'",
   "create_passive": "Create a new account without passphrase",
   "create_poll": "Utwórz ankietę",
-  "create_your_account": "Utwórz konto",
   "csv_add_recipients": "Dodaj odbiorcę za pomocą CSV",
   "csv_error_duplicated_recipient": "Zduplikowany odbiorca",
   "csv_error_invalid_amount": "Nieprawidłowa wartość kwoty",
