--- a/web/angular-wallet/src/locales/pt-br.json
+++ b/web/angular-wallet/src/locales/pt-br.json
@@ -5,15 +5,18 @@
   "account_added": "Conta adicionada com sucesso",
   "account_balance": "Saldo da conta",
   "account_create_new": "Criar uma nova conta",
+  "account_create_new_short": "Nova conta",
   "account_created": "Sua conta foi criada",
   "account_details": "Detalhes da conta",
   "account_id": "ID da conta",
   "account_import": "Importar conta existente",
+  "account_import_short": "Importar conta",
   "account_info": "Informações da Conta",
   "account_is_not_public_yet": "Nota: Sua conta não será visível no blockchain, a menos que você execute pelo menos uma transação ou tenha recebido moedas ou mensagens.",
   "account_no_assets": "Não foram encontrados ativos para esta conta.",
   "account_qr_code": "Código QR da conta",
   "account_watch": "Importar uma conta que você gostaria de observar apenas",
+  "account_watch_short": "Observar Conta",
   "accounts": "Contas",
   "actions": "Ações",
   "activate": "Ativar",
@@ -196,7 +199,6 @@
   "copy_send_message_link": "Copy 'Send Message' Link",
   "create_passive": "Create a new account without passphrase",
   "create_poll": "Criar Enquete",
-  "create_your_account": "Crie a Sua Conta",
   "csv_add_recipients": "Adicionar destinatário usando CSV",
   "csv_error_duplicated_recipient": "Destinatário duplicado",
   "csv_error_invalid_amount": "Valor de valor inválido",
