--- a/web/angular-wallet/src/locales/ru.json
+++ b/web/angular-wallet/src/locales/ru.json
@@ -5,15 +5,18 @@
   "account_added": "Аккаунт успешно добавлен",
   "account_balance": "Баланс аккаунта",
   "account_create_new": "Создать новый аккаунт",
+  "account_create_new_short": "Новый аккаунт",
   "account_created": "Ваш аккаунт был создан",
   "account_details": "Детали аккаунта",
   "account_id": "ID аккаунта",
   "account_import": "Импортировать существующий аккаунт",
+  "account_import_short": "Импорт аккаунта",
   "account_info": "Информация об аккаунте",
   "account_is_not_public_yet": "Примечание. Ваша учетная запись не будет отображаться в блокчейне, если вы не выполните хотя бы одну транзакцию или не получите монеты или сообщения.",
   "account_no_assets": "Не найдены активы для заданного аккаунта.",
   "account_qr_code": "QR-код аккаунта",
   "account_watch": "Импортировать учетную запись, которую вы хотите наблюдать только",
+  "account_watch_short": "Смотреть аккаунт",
   "accounts": "Accounts",
   "actions": "Действия",
   "activate": "Активировать",
@@ -196,7 +199,6 @@
   "copy_send_message_link": "Скопировать ссылку «Отправить сообщение»",
   "create_passive": "Create a new account without passphrase",
   "create_poll": "Создать опрос",
-  "create_your_account": "Создайте свой аккаунт",
   "csv_add_recipients": "Добавить получателя с помощью CSV",
   "csv_error_duplicated_recipient": "Дублированный получатель",
   "csv_error_invalid_amount": "Неверное значение суммы",
