--- a/web/angular-wallet/src/locales/sh.json
+++ b/web/angular-wallet/src/locales/sh.json
@@ -5,14 +5,17 @@
   "account_added": "",
   "account_balance": "Saldo računa",
   "account_create_new": "",
+  "account_create_new_short": "",
   "account_created": "Vaš račun je napravljen",
   "account_details": "Detalji računa",
   "account_id": "Račun ID",
   "account_import": "",
+  "account_import_short": "",
   "account_info": "Podaci računa",
   "account_is_not_public_yet": "Napomena: Vaš račun neće biti vidljiv u blokovskom lancu, osim ako izvršite barem jednu transakciju ili primite kovanice ili poruke.",
   "account_no_assets": "Uz ovaj račun nisu pronađeni asseti.",
   "account_qr_code": "QR Kod Računa",
+  "account_watch_short": "",
   "accounts": "Accounts",
   "actions": "Akcije",
   "activate": "",
@@ -195,7 +198,6 @@
   "copy_send_message_link": "Kopiraj poveznicu 'Pošalji poruku'",
   "create_passive": "Create a new account without passphrase",
   "create_poll": "Kreiraj anketu",
-  "create_your_account": "Kreirajte vaš račun",
   "csv_add_recipients": "",
   "csv_error_duplicated_recipient": "",
   "csv_error_invalid_amount": "",
