--- a/web/angular-wallet/src/locales/sk.json
+++ b/web/angular-wallet/src/locales/sk.json
@@ -5,15 +5,18 @@
   "account_added": "Účet bol úspešne pridaný",
   "account_balance": "Zostatok na účte",
   "account_create_new": "Vytvorte nový účet",
+  "account_create_new_short": "Nový účet",
   "account_created": "Váš účet bol vytvorený",
   "account_details": "Detaily účtu",
   "account_id": "ID účtu",
   "account_import": "Importovať existujúci účet",
+  "account_import_short": "Importovať účet",
   "account_info": "Informácie o účte",
   "account_is_not_public_yet": "Poznámka: Váš účet nebude v bloku blockchain viditeľný, pokiaľ nevykonáte aspoň jednu transakciu alebo nedostanete mince alebo správy.",
   "account_no_assets": "Žiadny majetok sa našiel pre tento účet.",
   "account_qr_code": "QR kód účtu",
   "account_watch": "Importujte iba účet, ktorý chcete sledovať",
+  "account_watch_short": "Sledujte účet",
   "accounts": "Accounts",
   "actions": "Akcie",
   "activate": "Aktivovať",
@@ -196,7 +199,6 @@
   "copy_send_message_link": "Kopírovať odkaz \"Odoslať správu",
   "create_passive": "Create a new account without passphrase",
   "create_poll": "Vytvoriť Hlasovanie",
-  "create_your_account": "Vytvorenie účtu",
   "csv_add_recipients": "Pridajte príjemcu pomocou CSV",
   "csv_error_duplicated_recipient": "Duplikovaný príjemca",
   "csv_error_invalid_amount": "Neplatná hodnota sumy",
