--- a/web/angular-wallet/src/locales/sr.json
+++ b/web/angular-wallet/src/locales/sr.json
@@ -5,15 +5,18 @@
   "account_added": "Налог је успешно додат",
   "account_balance": "Салдо Налога",
   "account_create_new": "Направи нови налог",
+  "account_create_new_short": "Нови налог",
   "account_created": "Ваш налог је направљен",
   "account_details": "Детаљи налога",
   "account_id": "ID Налога",
   "account_import": "Увези постојећи налог",
+  "account_import_short": "Увези рачун",
   "account_info": "Информације Налога",
   "account_is_not_public_yet": "Напомена: Ваш налог неће бити видљив у блоцкцхаину, осим ако извршите бар једну трансакцију.",
   "account_no_assets": "Уз овај налог нису пронађени ассет-и.",
   "account_qr_code": "QR Код Налога",
   "account_watch": "Увозите налог који желите да посматрате само",
+  "account_watch_short": "Погледајте налог",
   "accounts": "Accounts",
   "actions": "Акције",
   "activate": "Активирати",
@@ -196,7 +199,6 @@
   "copy_send_message_link": "Копирајте Линк 'Пошаљи Поруку'",
   "create_passive": "Create a new account without passphrase",
   "create_poll": "Нова Анкета",
-  "create_your_account": "Креирајте Ваш Налог",
   "csv_add_recipients": "Додајте примаоца помоћу ЦСВ-а",
   "csv_error_duplicated_recipient": "Дуплирани прималац",
   "csv_error_invalid_amount": "Неважећа вредност износа",
