--- a/web/angular-wallet/src/locales/tr.json
+++ b/web/angular-wallet/src/locales/tr.json
@@ -5,15 +5,18 @@
   "account_added": "Hesap başarıyla eklendi",
   "account_balance": "Hesap bakiyesi",
   "account_create_new": "Yeni bir hesap oluştur",
+  "account_create_new_short": "Yeni hesap",
   "account_created": "Hesabınız oluşturuldu",
   "account_details": "Hesap Bilgileri",
   "account_id": "Hesap No.",
   "account_import": "Mevcut hesabı içe aktar",
+  "account_import_short": "Hesabı İçe Aktar",
   "account_info": "Hesap Bilgisi",
   "account_is_not_public_yet": "Not: Hesabınız, en az bir işlem gerçekleştirmezseniz veya bozuk para veya mesaj alamazsanız, blok zincirinde görünmez.",
   "account_no_assets": "Bu hesaba ağit hiçbir ürün bulunmamaktadır ",
   "account_qr_code": "Hesap QR Kodu",
   "account_watch": "Yalnızca gözlemlemek istediğiniz bir hesabı içe aktarın",
+  "account_watch_short": "Hesabı izle",
   "accounts": "Accounts",
   "actions": "işlemler",
   "activate": "etkinleştirme",
@@ -196,7 +199,6 @@
   "copy_send_message_link": "'Mesaj Gönder' bağlantısını kopyala",
   "create_passive": "Create a new account without passphrase",
   "create_poll": "Anket Oluştur",
-  "create_your_account": "Hesap Oluştur",
   "csv_add_recipients": "CSV kullanarak Alıcı Ekleyin",
   "csv_error_duplicated_recipient": "Çoğaltılmış Alıcı",
   "csv_error_invalid_amount": "Geçersiz tutar değeri",
