--- a/web/angular-wallet/src/locales/uk.json
+++ b/web/angular-wallet/src/locales/uk.json
@@ -5,15 +5,18 @@
   "account_added": "Обліковий запис успішно додано",
   "account_balance": "Залишок на рахунку",
   "account_create_new": "Створити новий акаунт",
+  "account_create_new_short": "Новий акаунт",
   "account_created": "Ваш обліковий запис створено",
   "account_details": "Подробиці аккаунта",
   "account_id": "ID аккаунта",
   "account_import": "Імпортуйте наявний рахунок",
+  "account_import_short": "Імпорт рахунку",
   "account_info": "Інформація про аккаунт",
   "account_is_not_public_yet": "Примітка. Ваш обліковий запис не буде видно в блоці, якщо ви не виконаєте принаймні одну транзакцію або отримаєте монети або повідомлення.",
   "account_no_assets": "Не знайдені активи для заданого аккаунта.",
   "account_qr_code": "QR-код аккаунта",
   "account_watch": "Імпортуйте обліковий запис, який ви хотіли б лише спостерігати",
+  "account_watch_short": "Дивитися обліковий запис",
   "accounts": "Accounts",
   "actions": "Дії",
   "activate": "Активуйте",
@@ -196,7 +199,6 @@
   "copy_send_message_link": "Скопіювати посилання \"Відправити повідомлення",
   "create_passive": "Create a new account without passphrase",
   "create_poll": "Створити опитування",
-  "create_your_account": "Створення аккаунта",
   "csv_add_recipients": "Додати одержувача за допомогою CSV",
   "csv_error_duplicated_recipient": "Дубльований отримувач",
   "csv_error_invalid_amount": "Недійсне значення суми",
