--- a/web/angular-wallet/src/locales/zh-cn.json
+++ b/web/angular-wallet/src/locales/zh-cn.json
@@ -5,15 +5,18 @@
   "account_added": "帐户已成功添加",
   "account_balance": "帐户余额",
   "account_create_new": "创建一个新账户",
+  "account_create_new_short": "新账户",
   "account_created": "您的帐号已经建立",
   "account_details": "帐户详细信息",
   "account_id": "帐户 ID",
   "account_import": "导入现有帐户",
+  "account_import_short": "导入帐号",
   "account_info": "帐户信息",
   "account_is_not_public_yet": "注意：除非您执行至少一笔交易或已收到硬币或消息，否则您的帐户将不会显示在区块链中。",
   "account_no_assets": "该帐户没有资产。",
   "account_qr_code": "帐户 QR 码",
   "account_watch": "导入您只想观察的帐户",
+  "account_watch_short": "监视帐户",
   "accounts": "Accounts",
   "actions": "操作",
   "activate": "启用",
@@ -196,7 +199,6 @@
   "copy_send_message_link": "复制“发送信息”链接",
   "create_passive": "Create a new account without passphrase",
   "create_poll": "创建投票",
-  "create_your_account": "创建您的帐户",
   "csv_add_recipients": "使用CSV添加收件人",
   "csv_error_duplicated_recipient": "重复的收件人",
   "csv_error_invalid_amount": "金额值无效",
