--- a/web/angular-wallet/src/locales/zh-tw.json
+++ b/web/angular-wallet/src/locales/zh-tw.json
@@ -5,15 +5,18 @@
   "account_added": "帐户已成功添加",
   "account_balance": "帳戶餘額",
   "account_create_new": "创建一个新账户",
+  "account_create_new_short": "新账户",
   "account_created": "您的帐号已经建立",
   "account_details": "帳戶詳細信息",
   "account_id": "帳戶 ID",
   "account_import": "导入现有帐户",
+  "account_import_short": "导入帐号",
   "account_info": "帳戶信息",
   "account_is_not_public_yet": "注意：除非您执行至少一笔交易或已收到硬币或消息，否则您的帐户将不会显示在区块链中。",
   "account_no_assets": "該帳戶沒有資產。",
   "account_qr_code": "帳戶 QR 碼",
   "account_watch": "导入您只想观察的帐户",
+  "account_watch_short": "监视帐户",
   "accounts": "Accounts",
   "actions": "操作",
   "activate": "启用",
@@ -196,7 +199,6 @@
   "copy_send_message_link": "複製 '發送消息'鏈接",
   "create_passive": "Create a new account without passphrase",
   "create_poll": "創建投票",
-  "create_your_account": "創建您的帳戶",
   "csv_add_recipients": "使用CSV添加收件人",
   "csv_error_duplicated_recipient": "重复的收件人",
   "csv_error_invalid_amount": "金额值无效",
