--- a/web/angular-wallet/src/locales/hi.json
+++ b/web/angular-wallet/src/locales/hi.json
@@ -5,15 +5,18 @@
   "account_added": "खाता सफलतापूर्वक जोड़ा गया",
   "account_balance": "खाते की शेष राशि",
   "account_create_new": "एक नया खाता बनाएं",
+  "account_create_new_short": "नया खाता",
   "account_created": "आपका खाता बना दिया गया है",
   "account_details": "खाता विवरण",
   "account_id": "खाता ID",
   "account_import": "मौजूदा खाते को आयात करें",
+  "account_import_short": "आयात खाता",
   "account_info": "खाता जानकारी",
   "account_is_not_public_yet": "नोट: आपका खाता ब्लॉकचेन में दिखाई नहीं देगा, जब तक कि आप कम से कम एक लेनदेन को अंजाम नहीं देते, या सिक्के या संदेश प्राप्त नहीं करते।",
   "account_no_assets": "इस खाते द्वारा कोई संपत्ति नहीं पायी गयी।",
   "account_qr_code": "खाता QR कोड",
   "account_watch": "एक खाता आयात करें जिसे आप केवल निरीक्षण करना चाहते हैं",
+  "account_watch_short": "खाता देखें",
   "accounts": "Accounts",
   "actions": "क्रिया",
   "activate": "सक्रिय",
@@ -196,7 +199,6 @@
   "copy_send_message_link": "'संदेश भेजें' लिंक कापी करें",
   "create_passive": "Create a new account without passphrase",
   "create_poll": "मतदान बनाएँ",
-  "create_your_account": "अपना खाता बनाएँ",
   "csv_add_recipients": "CSV का उपयोग करके प्राप्तकर्ता जोड़ें",
   "csv_error_duplicated_recipient": "डुप्लिकेट प्राप्तकर्ता",
   "csv_error_invalid_amount": "अमान्य राशि मान",
