--- a/web/angular-wallet/src/locales/ja.json
+++ b/web/angular-wallet/src/locales/ja.json
@@ -5,15 +5,18 @@
   "account_added": "アカウントが正常に追加されました",
   "account_balance": "アカウントの残高",
   "account_create_new": "新しいアカウントを作成する",
+  "account_create_new_short": "新しいアカウント",
   "account_created": "あなたのアカウントが作成されました",
   "account_details": "アカウントの詳細",
   "account_id": "アカウントID",
   "account_import": "既存のアカウントをインポートする",
+  "account_import_short": "アカウントをインポート",
   "account_info": "アカウント情報",
   "account_is_not_public_yet": "注：少なくとも1つの取引を実行するか、コインまたはメッセージを受け取っていない限り、あなたのアカウントはブロックチェーンに表示されません。",
   "account_no_assets": "このアカウントには資産を見つけられませんでした。",
   "account_qr_code": "アカウントのQR コード",
   "account_watch": "監視するだけのアカウントをインポートします",
+  "account_watch_short": "アカウントを見る",
   "accounts": "Accounts",
   "actions": "アクション",
   "activate": "アクティベート",
@@ -196,7 +199,6 @@
   "copy_send_message_link": "「メッセージ送信」のリンクをコピー",
   "create_passive": "Create a new account without passphrase",
   "create_poll": "投票調査を作成",
-  "create_your_account": "アカウントを作成",
   "csv_add_recipients": "CSVを使用して受信者を追加",
   "csv_error_duplicated_recipient": "重複した受信者",
   "csv_error_invalid_amount": "無効な金額値",
